[package]
name = "dess-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
thiserror = "2.0.17"
log = "0.4.28"
raw-window-handle = "0.6.2"
gpu-descriptor = "0.3.2"
gpu-descriptor-ash = "0.3.0"
gpu-alloc = "0.6.0"
gpu-alloc-ash = "0.7.0"
parking_lot = "0.12.5"